# SNN-MNIST

./: .gitattributes  .gitignore  CMakeLists.txt
assets/data/: small_mnist_test.csv
datasets/: small_mnist_test.csv  small_mnist_train.csv
headers/: layer.hpp  neuralnetwork.hpp  numberdisplay.hpp  parser.hpp  text.hpp  window.hpp
source/: layer.cpp  main.cpp  neuralnetwork.cpp  numberdisplay.cpp  parser.cpp  text.cpp  window.cpp
